AA Activity text wrap issue fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -2436,7 +2436,8 @@ body #displayContent  { height:auto !important;}
 body  .commentNotes div.Buttons { width:58% !important;}
 body .commentNotes .commentICON  img{ max-height:100px;}
 /* PDF Comment Textarea */
- html body .pro_container .ui-draggable-dragging  {width:95px !important; margin-right:0 !important;}
+ html body .pro_container .ui-draggable-dragging  {width:95px !important; height:auto; margin-right:0 !important; padding:14px;}
+ html body .pro_container .ui-draggable-dragging a { height:auto; font-size:12px;}
  .hideSection .web_nav_adj{ display:none;}
  .popup {width: 375px; margin-left:-187px;}
 body.course-quiz-main-container { overflow:hidden; position:fixed;}
